Notebook setup + menu gradient

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,14 @@
         "d:\\Alec\\JavaFX\\javafx-sdk-17.0.6\\lib\\javafx.media.jar",
         "d:\\Alec\\JavaFX\\javafx-sdk-17.0.6\\lib\\javafx.swing.jar",
         "d:\\Alec\\JavaFX\\javafx-sdk-17.0.6\\lib\\javafx.web.jar",
-        "d:\\Alec\\JavaFX\\javafx-sdk-17.0.6\\lib\\javafx-swt.jar"
+        "d:\\Alec\\JavaFX\\javafx-sdk-17.0.6\\lib\\javafx-swt.jar",
+        "c:\\Users\\aleclr\\Downloads\\javafx_and_scenebuilder\\javafx17_LTS\\lib\\javafx.base.jar",
+        "c:\\Users\\aleclr\\Downloads\\javafx_and_scenebuilder\\javafx17_LTS\\lib\\javafx.controls.jar",
+        "c:\\Users\\aleclr\\Downloads\\javafx_and_scenebuilder\\javafx17_LTS\\lib\\javafx.fxml.jar",
+        "c:\\Users\\aleclr\\Downloads\\javafx_and_scenebuilder\\javafx17_LTS\\lib\\javafx.graphics.jar",
+        "c:\\Users\\aleclr\\Downloads\\javafx_and_scenebuilder\\javafx17_LTS\\lib\\javafx.media.jar",
+        "c:\\Users\\aleclr\\Downloads\\javafx_and_scenebuilder\\javafx17_LTS\\lib\\javafx.swing.jar",
+        "c:\\Users\\aleclr\\Downloads\\javafx_and_scenebuilder\\javafx17_LTS\\lib\\javafx.web.jar",
+        "c:\\Users\\aleclr\\Downloads\\javafx_and_scenebuilder\\javafx17_LTS\\lib\\javafx-swt.jar"
     ]
 }
