--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
             "name": "App",
             "request": "launch",
             "mainClass": "App",
-            "vmArgs": "--module-path \"D:/Alec/JavaFX/v2/javafx-sdk-17.0.6/lib\" --add-modules javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path \"C:/Users/aleclr/Downloads/javafx_and_scenebuilder/javafx17_LTS/lib\" --add-modules javafx.controls,javafx.fxml"
         }
     ]
 }
